_build/CrispASR/include/crispasr_session.h

CRISPASR_SESSION_API int crispasr_cache_ensure_file_abi(const char* filename, const char* url, int32_t quiet,
                                                        const char* cache_dir_override, char* out_buf, int32_t out_cap);
CRISPASR_SESSION_API int crispasr_cache_dir_abi(const char* cache_dir_override, char* out_buf, int32_t out_cap);
CRISPASR_SESSION_API int crispasr_registry_lookup_abi(const char* backend, char* out_filename, int32_t filename_cap,
                                                      char* out_url, int32_t url_cap, char* out_size, int32_t size_cap);
// Return the artifact count for a backend's exact `-m auto` default bundle,
// or 0 when the backend is unknown. On success, also writes the canonical
// backend key and registry licence (which may be empty). Negative values are
// argument/buffer errors.
CRISPASR_SESSION_API int crispasr_registry_default_bundle_info_abi(const char* backend, char* out_backend,
                                                                   int32_t backend_cap, char* out_license,
                                                                   int32_t license_cap,
                                                                   int32_t* out_requires_acceptance);
// Return one default-bundle artifact by index. 0 = success, 1 = unknown
// backend/index, -1 = invalid arguments, 2 = an output buffer is too small.
CRISPASR_SESSION_API int crispasr_registry_default_bundle_artifact_abi(const char* backend, int32_t index,
                                                                       int32_t* out_kind, char* out_filename,
                                                                       int32_t filename_cap, char* out_url,
                                                                       int32_t url_cap, char* out_size,
                                                                       int32_t size_cap);