_build/CrispASR/include/crispasr.h

CRISPASR_API void crispasr_c2pa_free(unsigned char* p);
// Wrap float32 mono PCM into a 16-bit WAV carrying the AI-generated provenance
// metadata tag (standard WAV LIST/INFO chunk — interoperable, any tool reads it).
// The zero-cost provenance floor for wasm/bindings that only get raw PCM from
// synthesis. Returns malloc'd WAV bytes (free with crispasr_c2pa_free), *out_len
// set, or NULL on bad input. Feed to crispasr_c2pa_sign() to also embed a C2PA
// manifest.
CRISPASR_API unsigned char* crispasr_pcm_to_wav(const float* pcm, int n_samples, int sample_rate, size_t* out_len);
// ─── Audio decode ────────────────────────────────────────────────────
//
// Decode any supported audio file (WAV/MP3/FLAC/OGG/Opus/AAC/M4A/WebM/AMR/…)
// to 16 kHz mono float PCM. Returns 0 with a malloc-owned buffer in *out_pcm
// (free with crispasr_audio_free), *out_samples element count and
// *out_sample_rate (always 16000), or a negative error. No ffmpeg needed for
// the common formats (glint AAC/Opus, miniaudio, AudioToolbox/fdk, libopus, …).
CRISPASR_API int crispasr_audio_load(const char* path, float** out_pcm, int* out_samples, int* out_sample_rate);
// Like crispasr_audio_load but resamples to `target_rate` instead of 16 kHz.
// When the source audio already matches `target_rate`, no resampling occurs —
// avoids the quality-degrading down-then-up path for non-16 kHz backends.
CRISPASR_API int crispasr_audio_load_at_rate(const char* path, int target_rate, float** out_pcm, int* out_samples,
                                             int* out_sample_rate);
CRISPASR_API void crispasr_audio_free(float* pcm);