_build/CrispASR/bindings/csharp/CrispASR/NativeMethods.cs


        // ---- Registry + cache ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_registry_lookup_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backend,
            byte[] outFilename, int filenameCap,
            byte[] outUrl, int urlCap,
            byte[] outSize, int sizeCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_registry_default_bundle_info_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backend,
            byte[] outBackend, int backendCap,
            byte[] outLicense, int licenseCap,
            out int outRequiresAcceptance);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_registry_default_bundle_artifact_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backend,
            int index, out int outKind,
            byte[] outFilename, int filenameCap,
            byte[] outUrl, int urlCap,
            byte[] outSize, int sizeCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_cache_ensure_file_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string url,
            int quiet,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? cacheDirOverride,
            byte[] outBuf, int outCap);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_cache_dir_abi(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? cacheDirOverride,
            byte[] outBuf, int outCap);

        // ---- Audio decode (issue #291: the binding had no way to read a file) ----
        // Decode any supported format to mono float32 PCM. *out_pcm is
        // malloc-owned by the native side — release it with crispasr_audio_free.
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_audio_load(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            out IntPtr outPcm, out int outSamples, out int outSampleRate);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_audio_load_at_rate(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path, int targetRate,
            out IntPtr outPcm, out int outSamples, out int outSampleRate);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_audio_free(IntPtr pcm);

        // Returns malloc'd WAV bytes; released with crispasr_c2pa_free (the
        // shared free for the C2PA/provenance byte-buffer family, per crispasr.h).
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_pcm_to_wav(
            float[] pcm, int nSamples, int sampleRate, out UIntPtr outLen);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_c2pa_free(IntPtr p);

        // ---- Helpers ----
        internal static string NullTerminated(byte[] buf)
        {
            int n = 0;
            while (n < buf.Length && buf[n] != 0) n++;
            return Encoding.UTF8.GetString(buf, 0, n);
        }

        internal static string? PtrToUtf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero) return null;
            return Marshal.PtrToStringUTF8(ptr);
        }
    }
}
